Added Silver Block

--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "item.advancedperipherals.silver_ingot": "Silver_Ingot"
+  "item.advancedperipherals.silver_ingot": "Silver Ingot",
+  "block.advancedperipherals.silver_ore": "Silver Ore",
+  "block.advancedperipherals.silver_block": "Silver Block"
 }
