--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.advancedperipherals.silver_ingot": "Silver Ingot",
   "block.advancedperipherals.silver_ore": "Silver Ore",
-  "block.advancedperipherals.silver_block": "Silver Block",
+  "block.advancedperipherals.speaker": "Speaker",
+  "block.advancedperipherals.chat_box": "Chat box",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
