--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -1,7 +1,7 @@
 {
   "item.advancedperipherals.silver_ingot": "Silberbarren",
   "block.advancedperipherals.silver_ore": "Silbererz",
-  "block.advancedperipherals.light_sensor": "Licht sensor",
+  "block.advancedperipherals.environment_detector": "Umgebungs Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
