Added the Player Detector. Also added a cooldown for the chatBox

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -3,5 +3,6 @@
   "block.advancedperipherals.silver_ore": "Silbererz",
   "block.advancedperipherals.environment_detector": "Umgebungs Detector",
   "block.advancedperipherals.chat_box": "Chat box",
+  "block.advancedperipherals.player_detector": "Spieler Detector",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
