--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -3,5 +3,6 @@
   "block.advancedperipherals.silver_ore": "Silver Ore",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
+  "block.advancedperipherals.player_detector": "Player Detector",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
