--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -5,5 +5,6 @@
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
   "block.advancedperipherals.me_bridge": "ME Bridge",
+  "block.advancedperipherals.rs_bridge": "RS Bridge(WIP)",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
