Creates RS Bridge

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -5,6 +5,6 @@
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Spieler Detector",
   "block.advancedperipherals.me_bridge": "ME Brücke",
-  "block.advancedperipherals.rs_bridge": "RS Brücke(WIP)",
+  "block.advancedperipherals.rs_bridge": "RS Brücke",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
