Do more work on turtles.

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -6,5 +6,6 @@
   "block.advancedperipherals.player_detector": "Spieler Detector",
   "block.advancedperipherals.me_bridge": "ME Brücke",
   "block.advancedperipherals.rs_bridge": "RS Brücke",
+  "block.advancedperipherals.chat_box_turtle": "Chatty",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
