--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,5 +1,12 @@
 {
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
+  "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
+  "item.advancedperipherals.tooltip.chunk_controller": "§7An crafting ingredient for the Chunky Turtle.",
+  "item.advancedperipherals.tooltip.environment_detector": "§7Can be used to interact with the World.",
+  "item.advancedperipherals.tooltip.player_detector": "§7Can be used to interact with Players.",
+  "item.advancedperipherals.tooltip.rs_bridge": "§7Can be used to interact with Refined Storage.",
+  "item.advancedperipherals.tooltip.me_bridge": "§7Can be used to interact with Applied Energistics 2.",
+  "item.advancedperipherals.tooltip.chat_box": "§7Can be used to read and write messages to the ingame chat.",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
