--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -1,7 +1,12 @@
 {
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
-  "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Informations",
-  "item.advancedperipherals.tooltip.chunk_controller": "§7An crafting ingredient for the Chunky Turtle.",
+  "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7Für Beschreibung",
+  "item.advancedperipherals.tooltip.chunk_controller": "§7Crafting Komponente für die Chunky Turtle.",
+  "item.advancedperipherals.tooltip.environment_detector": "§7Kann mit der Welt interagieren.",
+  "item.advancedperipherals.tooltip.player_detector": "§7Kann mit Spieler interagieren.",
+  "item.advancedperipherals.tooltip.rs_bridge": "§7Kann mit Refined Storage interagieren.",
+  "item.advancedperipherals.tooltip.me_bridge": "§7Kann mit Applied Energistics 2 interagieren.",
+  "item.advancedperipherals.tooltip.chat_box": "§7Kann genutzt werden um Nachrichten zu lesen und zu schreiben.",
   "block.advancedperipherals.environment_detector": "Umgebungs Detector",
   "block.advancedperipherals.chat_box": "Chat Box",
   "block.advancedperipherals.player_detector": "Spieler Detector",
