The chunky turtle is now disabled when it's disabled in the config.

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -7,9 +7,9 @@
   "item.advancedperipherals.tooltip.rs_bridge": "§7Kann mit Refined Storage interagieren.",
   "item.advancedperipherals.tooltip.me_bridge": "§7Kann mit Applied Energistics 2 interagieren.",
   "item.advancedperipherals.tooltip.chat_box": "§7Kann genutzt werden um Nachrichten zu lesen und zu schreiben.",
-  "block.advancedperipherals.environment_detector": "Umgebungs Detector",
+  "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
   "block.advancedperipherals.chat_box": "Chat Box",
-  "block.advancedperipherals.player_detector": "Spieler Detector",
+  "block.advancedperipherals.player_detector": "Spieler Detektor",
   "block.advancedperipherals.me_bridge": "ME Brücke",
   "block.advancedperipherals.rs_bridge": "RS Brücke",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
