--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
-  "item.advancedperipherals.tooltip.chunk_controller": "§7An crafting ingredient for the Chunky Turtle.",
+  "item.advancedperipherals.tooltip.chunk_controller": "§7A crafting ingredient for the Chunky Turtle.",
   "item.advancedperipherals.tooltip.environment_detector": "§7Can be used to interact with the World.",
   "item.advancedperipherals.tooltip.player_detector": "§7Can be used to interact with Players.",
   "item.advancedperipherals.tooltip.rs_bridge": "§7Can be used to interact with Refined Storage.",
