Fixed wrong arguments for craftItem

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -1,5 +1,6 @@
 {
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
+  "item.advancedperipherals.computer_tool": "Computer Werkzeug",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7Für Beschreibung",
   "item.advancedperipherals.tooltip.chunk_controller": "§7Crafting Komponente für die Chunky Turtle.",
   "item.advancedperipherals.tooltip.environment_detector": "§7Kann mit der Welt interagieren.",
