--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool.",
-  "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as a resistor.",
+  "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as an resistor.",
   "item.advancedperipherals.tooltip.chunk_controller": "§7A crafting ingredient for the Chunky Turtle.",
   "item.advancedperipherals.tooltip.environment_detector": "§7Can be used to interact with the World.",
   "item.advancedperipherals.tooltip.player_detector": "§7Can be used to interact with Players.",
