--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -10,12 +10,14 @@
   "item.advancedperipherals.tooltip.rs_bridge": "§7Can be used to interact with Refined Storage.",
   "item.advancedperipherals.tooltip.me_bridge": "§7Can be used to interact with Applied Energistics 2.",
   "item.advancedperipherals.tooltip.chat_box": "§7Can be used to read and write messages to the ingame chat.",
+  "item.advancedperipherals.tooltip.peripheral_casing": "§7An empty hull without the love it deserves.",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
   "block.advancedperipherals.me_bridge": "ME Bridge",
   "block.advancedperipherals.rs_bridge": "RS Bridge",
   "block.advancedperipherals.energy_detector": "Energy Detector",
+  "block.advancedperipherals.peripheral_casing": "Peripheral Casing",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
   "turtle.advancedperipherals.environment_detector_turtle": "Environment",
   "turtle.advancedperipherals.player_detector_turtle": "Player",
