--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
+  "item.advancedperipherals.ar_goggles": "AR Goggles",
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool.",
@@ -10,6 +11,9 @@
   "item.advancedperipherals.tooltip.rs_bridge": "§7Can be used to interact with Refined Storage.",
   "item.advancedperipherals.tooltip.me_bridge": "§7Can be used to interact with Applied Energistics 2.",
   "item.advancedperipherals.tooltip.chat_box": "§7Can be used to read and write messages to the ingame chat.",
+  "item.advancedperipherals.tooltip.ar_controller": "§7Used to control linked AR goggles wirelessly.",
+  "item.advancedperipherals.tooltip.ar_goggles": "§7Provide an HUD overlay, controllable by the linked AR Controller. Right click controller to link.",
+  "item.advancedperipherals.tooltip.ar_goggles.binding": "Bound to controller at %d %d %d.",
   "item.advancedperipherals.tooltip.peripheral_casing": "§7An empty hull without the love it deserves.",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
@@ -17,6 +21,7 @@
   "block.advancedperipherals.me_bridge": "ME Bridge",
   "block.advancedperipherals.rs_bridge": "RS Bridge",
   "block.advancedperipherals.energy_detector": "Energy Detector",
+  "block.advancedperipherals.ar_controller": "AR Controller",
   "block.advancedperipherals.peripheral_casing": "Peripheral Casing",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
   "turtle.advancedperipherals.environment_detector_turtle": "Environment",
@@ -25,5 +30,6 @@
   "pocket.advancedperipherals.environment_pocket": "Environment",
   "pocket.advancedperipherals.player_pocket": "Player",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
-  "itemGroup.advancedperipheralstab": "Advanced Peripherals"
+  "itemGroup.advancedperipheralstab": "Advanced Peripherals",
+  "curios.identifier.glasses": "Glasses"
 }
