--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -12,7 +12,8 @@
   "item.advancedperipherals.tooltip.me_bridge": "§7Can be used to interact with Applied Energistics 2.",
   "item.advancedperipherals.tooltip.chat_box": "§7Can be used to read and write messages to the ingame chat.",
   "item.advancedperipherals.tooltip.peripheral_casing": "§7An empty hull without the love it deserves.",
-  "item.advancedperipherals.tooltip.memory_card": "§7Can safe the rights of a player to use it in a inventory manager.",
+  "item.advancedperipherals.tooltip.memory_card": "§7Can save the rights of a player to use it in a inventory manager.",
+  "item.advancedperipherals.tooltip.memory_card.bound": "Bound to %s.",
   "item.advancedperipherals.tooltip.inventory_manager": "§7This block is able to send or receive specific items from a player inventory.",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
