Added getAnalogOutput to the redstone integrator, also added a description.

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -19,6 +19,7 @@
   "item.advancedperipherals.tooltip.memory_card": "§7Speichert den Namen eines Spielers um diesen in einem Inventar Manager zu nutzen.",
   "item.advancedperipherals.tooltip.memory_card.bound": "Verbunden mit %s.",
   "item.advancedperipherals.tooltip.inventory_manager": "§7Der Block ist in der Lage, items zu einem Spieler Inventar zu senden oder zu empfangen.",
+  "item.advancedperipherals.tooltip.redstone_integrator": "§7Dieser Block ist in der Lage, mit Redstone zu interagieren. Funktioniert exakt genau so wie die Redstone API von cc.",
   "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
   "block.advancedperipherals.chat_box": "Chat Box",
   "block.advancedperipherals.player_detector": "Spieler Detektor",
