--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -18,8 +18,8 @@
   "item.advancedperipherals.tooltip.peripheral_casing": "§7Eine leere Hülle ohne die Liebe die sie verdient hat.",
   "item.advancedperipherals.tooltip.memory_card": "§7Speichert den Namen eines Spielers um diesen in einem Inventar Manager zu nutzen.",
   "item.advancedperipherals.tooltip.memory_card.bound": "Verbunden mit %s.",
-  "item.advancedperipherals.tooltip.inventory_manager": "§7Der Block ist in der Lage, items zu einem Spieler Inventar zu senden oder zu empfangen.",
-  "item.advancedperipherals.tooltip.redstone_integrator": "§7Dieser Block ist in der Lage, mit Redstone zu interagieren. Funktioniert exakt genau so wie die Redstone API von cc.",
+  "item.advancedperipherals.tooltip.inventory_manager": "§Dieser Block ist in der Lage, items zu einem Spieler Inventar zu senden oder zu empfangen.",
+  "item.advancedperipherals.tooltip.redstone_integrator": "§7Dieser Block ist in der Lage, mit redstone zu interagieren genau so wie es ein normaler computer tut.",
   "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
   "block.advancedperipherals.chat_box": "Chat Box",
   "block.advancedperipherals.player_detector": "Spieler Detektor",
@@ -41,5 +41,6 @@
   "text.advancedperipherals.removed_player": "Du wurdest aus der Memory Karte gelöscht!",
   "text.advancedperipherals.added_player": "Du wurdest aus der Memory Karte entfernt!",
   "text.advancedperipherals.linked_goggles": "Erfolgreich verknüpft!",
+  "entity.minecraft.villager.advancedperipherals.computer_scientist": "Informatiker",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
