Doing some localization

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -20,6 +20,7 @@
   "item.advancedperipherals.tooltip.memory_card.bound": "Verbunden mit %s.",
   "item.advancedperipherals.tooltip.inventory_manager": "§Dieser Block ist in der Lage, items zu einem Spieler Inventar zu senden oder zu empfangen.",
   "item.advancedperipherals.tooltip.redstone_integrator": "§7Dieser Block ist in der Lage, mit redstone zu interagieren genau so wie es ein normaler computer tut.",
+  "item.advancedperipherals.tooltip.peripheral_proxy": "§7Dieser Block ist in der Lage, mit vielen anderen Blöcken zu interagieren. \n Platziere dazu einfach einen unterstützen Block vor diesem um ihn zu nutzen.",
   "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
   "block.advancedperipherals.chat_box": "Chat Box",
   "block.advancedperipherals.player_detector": "Spieler Detektor",
@@ -27,9 +28,10 @@
   "block.advancedperipherals.rs_bridge": "RS Brücke",
   "block.advancedperipherals.ar_controller": "AR Controller",
   "block.advancedperipherals.energy_detector": "Energie Detektor",
-  "block.advancedperipherals.peripheral_casing": "Peripherie Casing",
+  "block.advancedperipherals.peripheral_casing": "Peripherie Gehäuse",
   "block.advancedperipherals.inventory_manager": "Inventar Manager",
   "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
+  "block.advancedperipherals.peripheral_proxy": "Peripheral Proxy",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
   "turtle.advancedperipherals.environment_detector_turtle": "Umgebungs",
   "turtle.advancedperipherals.player_detector_turtle": "Spieler",
