Improved the messages of the memory card

--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -2,7 +2,7 @@
   "item.advancedperipherals.chunk_controller": "Chunk Controller",
   "item.advancedperipherals.computer_tool": "Computer Werkzeug",
   "item.advancedperipherals.ar_goggles": "AR-Brille",
-  "item.advancedperipherals.memory_card": "Memory Karte",
+  "item.advancedperipherals.memory_card": "Speicher Karte",
   "item.advancedperipherals.tooltip.computer_tool": "§7Mit diesem Tool kannst du GUI's von Blöcken öffnen. Aber zur zeit ist dieses Item nutzlos.",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7Für Beschreibung",
   "item.advancedperipherals.tooltip.energy_detector": "§7Kann die Übertragung von Energie erkennen und handelt als Wiederstand.",
@@ -40,8 +40,8 @@
   "pocket.advancedperipherals.player_pocket": "Spieler",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
   "curios.identifier.glasses": "Brille",
-  "text.advancedperipherals.removed_player": "Du wurdest aus der Memory Karte gelöscht!",
-  "text.advancedperipherals.added_player": "Du wurdest aus der Memory Karte entfernt!",
+  "text.advancedperipherals.removed_player": "Die Speicher Karte wurde geleert",
+  "text.advancedperipherals.added_player": "Die Speicher Karte wurde dir zugewiesen",
   "text.advancedperipherals.linked_goggles": "Erfolgreich verknüpft!",
   "entity.minecraft.villager.advancedperipherals.computer_scientist": "Informatiker",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
