--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -20,7 +20,7 @@
   "item.advancedperipherals.tooltip.memory_card.bound": "Bound to %s.",
   "item.advancedperipherals.tooltip.inventory_manager": "§7This block is able to send or receive specific items from a player inventory.",
   "item.advancedperipherals.tooltip.redstone_integrator": "§7This block is able to interact with redstone. Works exactly like the redstone api of an computer.",
-  "item.advancedperipherals.tooltip.peripheral_proxy": "§7This block is able to interact with a lot of other blocks. \n Just place a supported block in front of it and now you can use it.",
+  "item.advancedperipherals.tooltip.block_reader": "§7This block is able to read data of blocks and tile entities in front of it",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
@@ -31,7 +31,7 @@
   "block.advancedperipherals.peripheral_casing": "Peripheral Casing",
   "block.advancedperipherals.inventory_manager": "Inventory Manager",
   "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
-  "block.advancedperipherals.peripheral_proxy": "Peripheral Proxy",
+  "block.advancedperipherals.block_reader": "Block Reader",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
   "turtle.advancedperipherals.environment_detector_turtle": "Environment",
   "turtle.advancedperipherals.player_detector_turtle": "Player",
