Added MineColonies integration

--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.advancedperipherals.tooltip.inventory_manager": "§7This block is able to send or receive specific items from a player inventory.",
   "item.advancedperipherals.tooltip.redstone_integrator": "§7This block is able to interact with redstone. Works exactly like the redstone api of an computer.",
   "item.advancedperipherals.tooltip.block_reader": "§7This block is able to read data of blocks and tile entities in front of it",
+  "item.advancedperipherals.tooltip.colony_integrator": "§7This block is able to interact with mine colonies",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
@@ -32,6 +33,7 @@
   "block.advancedperipherals.inventory_manager": "Inventory Manager",
   "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
   "block.advancedperipherals.block_reader": "Block Reader",
+  "block.advancedperipheral.colony_integrator": "Colony Integrator",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
   "turtle.advancedperipherals.environment_detector_turtle": "Environment",
   "turtle.advancedperipherals.player_detector_turtle": "Player",
