--- a/src/main/resources/assets/advancedperipherals/lang/de_de.json
+++ b/src/main/resources/assets/advancedperipherals/lang/de_de.json
@@ -21,6 +21,7 @@
   "item.advancedperipherals.tooltip.inventory_manager": "§Dieser Block ist in der Lage, items zu einem Spieler Inventar zu senden oder zu empfangen.",
   "item.advancedperipherals.tooltip.redstone_integrator": "§7Dieser Block ist in der Lage, mit redstone zu interagieren genau so wie es ein normaler computer tut.",
   "item.advancedperipherals.tooltip.block_reader": "§7Dieser Block ist in der Lage, Daten von Blöcken und Tile Entities vor ihm zu lesen.",
+  "item.advancedperipherals.tooltip.colony_integrator": "§7Dieser Block ist in der Lage, mit Mine Colonies und deren kolonien zu interagieren.",
   "block.advancedperipherals.environment_detector": "Umgebungs Detektor",
   "block.advancedperipherals.chat_box": "Chat Box",
   "block.advancedperipherals.player_detector": "Spieler Detektor",
@@ -32,6 +33,7 @@
   "block.advancedperipherals.inventory_manager": "Inventar Manager",
   "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
   "block.advancedperipherals.block_reader": "Block Leser",
+  "block.advancedperipheral.colony_integrator": "Kolonie Integrator",
   "turtle.advancedperipherals.chat_box_turtle": "Chatty",
   "turtle.advancedperipherals.environment_detector_turtle": "Umgebungs",
   "turtle.advancedperipherals.player_detector_turtle": "Spieler",
