--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -3,6 +3,9 @@
   "item.advancedperipherals.computer_tool": "Computer Tool",
   "item.advancedperipherals.ar_goggles": "AR Goggles",
   "item.advancedperipherals.memory_card": "Memory Card",
+  "item.advancedperipherals.weak_mechanic_soul": "Weak mechanic soul",
+  "item.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak mechanic soul",
+  "item.advancedperipherals.end_mechanic_soul": "End mechanic soul",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool. But for now, it's useless.",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
   "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as an resistor.",
@@ -24,6 +27,9 @@
   "item.advancedperipherals.tooltip.geo_scanner": "§7This block is able to scan area around him",
   "item.advancedperipherals.tooltip.colony_integrator": "§7This block is able to interact with mine colonies",
   "item.advancedperipherals.tooltip.nbt_storage": "§7This block is able to store some nbt data",
+  "item.advancedperipherals.tooltip.weak_mechanic_soul": "§7Upgrade for turtle, that allow turtle to become useful again",
+  "item.advancedperipherals.tooltip.overpowered_weak_mechanic_soul": "§7Upgrade for turtle, that provide some overpowered uses! Be careful, upgrade is very fragile.",
+  "item.advancedperipherals.tooltip.end_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and teleportation in world",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
@@ -43,6 +49,9 @@
   "turtle.advancedperipherals.player_detector_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
+  "turtle.advancedperipherals.weak_mechanic_soul": "Weak mechanic",
+  "turtle.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak automata",
+  "turtle.advancedperipherals.end_mechanic_soul": "End automata",
   "pocket.advancedperipherals.environment_pocket": "Environment",
   "pocket.advancedperipherals.player_pocket": "Player",
   "pocket.advancedperipherals.chatty_pocket": "Chatty",
@@ -51,6 +60,7 @@
   "text.advancedperipherals.removed_player": "Cleared the memory card",
   "text.advancedperipherals.added_player": "Added you to the memory card",
   "text.advancedperipherals.linked_goggles": "Successfully linked AR goggles!",
+  "text.advancedperipherals.weak_mechanical_player_used_by_player": "You trying to feed entity to soul, but your own body refuses to do this. Maybe something more mechanical can do this?",
   "entity.minecraft.villager.advancedperipherals.computer_scientist": "Computer Scientist",
   "itemGroup.advancedperipheralstab": "Advanced Peripherals"
 }
