--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -49,7 +49,7 @@
   "turtle.advancedperipherals.player_detector_turtle": "Player",
   "turtle.advancedperipherals.chunky_turtle": "Chunky",
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
-  "turtle.advancedperipherals.weak_mechanic_soul": "Weak mechanic",
+  "turtle.advancedperipherals.weak_mechanic_soul": "Weak automata",
   "turtle.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak automata",
   "turtle.advancedperipherals.end_mechanic_soul": "End automata",
   "pocket.advancedperipherals.environment_pocket": "Environment",
