Add functional husbandry mechanic soul

--- a/src/main/resources/assets/advancedperipherals/lang/en_us.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.advancedperipherals.weak_mechanic_soul": "Weak mechanic soul",
   "item.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak mechanic soul",
   "item.advancedperipherals.end_mechanic_soul": "End mechanic soul",
+  "item.advancedperipherals.husbandry_mechanic_soul": "Husbandry mechanic soul",
   "item.advancedperipherals.tooltip.computer_tool": "§7You can access a GUI of our blocks with this magic tool. But for now, it's useless.",
   "item.advancedperipherals.tooltip.hold_ctrl": "§b[§7CTRL§b] §7For Description",
   "item.advancedperipherals.tooltip.energy_detector": "§7Can detect energy flow and acts as an resistor.",
@@ -30,6 +31,7 @@
   "item.advancedperipherals.tooltip.weak_mechanic_soul": "§7Upgrade for turtle, that allow turtle to become useful again",
   "item.advancedperipherals.tooltip.overpowered_weak_mechanic_soul": "§7Upgrade for turtle, that provide some overpowered uses! Be careful, upgrade is very fragile.",
   "item.advancedperipherals.tooltip.end_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and teleportation in world",
+  "item.advancedperipherals.tooltip.husbandry_mechanic_soul": "§7Upgrade for turtle, that allow basic interaction and advanced interaction with animals",
   "block.advancedperipherals.environment_detector": "Environment Detector",
   "block.advancedperipherals.chat_box": "Chat box",
   "block.advancedperipherals.player_detector": "Player Detector",
@@ -51,6 +53,7 @@
   "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
   "turtle.advancedperipherals.weak_mechanic_soul": "Weak automata",
   "turtle.advancedperipherals.overpowered_weak_mechanic_soul": "Overpowered weak automata",
+  "turtle.advancedperipherals.husbandry_weak_mechanic_soul": "Husbandry weak automata",
   "turtle.advancedperipherals.end_mechanic_soul": "End automata",
   "pocket.advancedperipherals.environment_pocket": "Environment",
   "pocket.advancedperipherals.player_pocket": "Player",
